# api.yaml
@@ -26,9 +26,9 @@ tags:
       description: Find out more
       url: 'http://swagger.io'
   - name: store
-    description: Operations about user
-  - name: user
     description: Access to Petstore orders
+  - name: user
+    description: Operations about user
     externalDocs:
       description: Find out more about our store
       url: 'http://swagger.io'
@@ -410,10 +410,14 @@ paths:
           content:
             application/xml:
               schema:
-                $ref: '#/components/schemas/User'
+                type: array
+                items:
+                  $ref: '#/components/schemas/User'
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
+                type: array
+                items:
+                  $ref: '#/components/schemas/User'
         default:
           description: successful operation
       requestBody:
@@ -424,25 +428,27 @@ paths:
               items:
                 $ref: '#/components/schemas/User'
   /user/login:
-    get:
+    post:
       tags:
         - user
       summary: Logs user into the system
       description: ''
       operationId: loginUser
-      parameters:
-        - name: username
-          in: query
-          description: The user name for login
-          required: false
-          schema:
-            type: string
-        - name: password
-          in: query
-          description: The password for login in clear text
-          required: false
-          schema:
-            type: string
+      requestBody:
+        content:
+          application/x-www-form-urlencoded:
+            schema:
+              type: object
+              properties:
+                username:
+                  description: The user name for login
+                  type: string
+                password:
+                  description: The password for login in clear text
+                  type: string
+              required:
+                - username
+                - password
       responses:
         '200':
           description: successful operation
@@ -467,7 +473,7 @@ paths:
         '400':
           description: Invalid username/password supplied
   /user/logout:
-    get:
+    put:
       tags:
         - user
       summary: Logs out current logged in user session
@@ -503,8 +509,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/User'
-        '400':
-          description: Invalid username supplied
         '404':
           description: User not found
     put:
@@ -578,6 +582,8 @@ components:
           example: approved
         complete:
           type: boolean
+      required:
+        - petId
       xml:
         name: order
       type: object
@@ -613,6 +619,13 @@ components:
           format: int32
           example: 1
           description: User Status
+          readOnly: true
+      required:
+        - username
+        - firstName
+        - lastName
+        - email
+        - phone
       xml:
         name: user
       type: object
