# petstore/src/io/github/kag0/petstore/models/User.scala
@@ -1,0 +1,10 @@
+package io.github.kag0.petstore.models
+
+case class User(
+    username: String,
+    firstName: String,
+    lastName: String,
+    email: String,
+    phone: String,
+    userStatus: Int = 1
+)
